--- a/src/main/resources/templates/registrer.html
+++ b/src/main/resources/templates/registrer.html
@@ -1,14 +1,20 @@
-<!-- registrer.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Registrer Bruger</title>
 </head>
 <body>
+<!-- Formularen til at registrere en ny bruger -->
 <h2>Registrer en ny bruger</h2>
-    <form th:action="@{/registrer}" th:object="${bruger}" method="post">
+<!-- th:action attributten definerer, hvor formdata skal sendes hen når formularen indsendes -->
+<!-- th:object angiver objektet, som formularens data bindes til -->
+<form th:action="@{/registrer}" th:object="${bruger}" method="post">
+    <!-- Input felt for navn. Bruger th:field til at binde data til Bruger objektet -->
+    <!-- th:field binder hvert inputfelt til en egenskab på objektet -->
     <p>Navn: <input type="text" th:field="*{navn}" /></p>
+    <!-- Input felt for email. Bruger th:field til at binde data til Bruger objektet -->
     <p>Email: <input type="email" th:field="*{email}" /></p>
+    <!-- Submit knap til at sende form data -->
     <p><button type="submit">Registrer</button></p>
 </form>
 </body>
